<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_newComplaint"
        android:icon="@drawable/ic_circle"
        android:title="@string/title_more" />
    <item
        android:id="@+id/navigation_Helpline"
        android:icon="@drawable/ic_helpline"
        android:title="@string/title_helpline" />
    <item
        android:id="@+id/navigation_others"
        android:icon="@drawable/ic_search"
        android:title="@string/title_other" />

</menu>
